--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-Index
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>School Logistics - CS3</title>
-    <link rel="shortcut icon" href="Files/logo.png" type="image/png">
+    <title>FHS: Exceptional Coffee Shop</title>
+    <link rel="shortcut icon" href="Files/fhscoffeelogo" type="image/png">
         <link rel="stylesheet" href="style.css">
 	
 
@@ -16,7 +15,7 @@ Index
         <div class="local-nav-wrapper">
             <div class="local-nav">
                 <a href="">
-                    <img src="Files/crewbrew logo bgless.png" alt="Crew Brew Logo" class="logo">
+                    <img src="Files/fhscoffeelogo.png" alt="Crew Brew Logo" class="logo">
                 </a>
 
                 <div class="right">
